--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -4,9 +4,17 @@
 }
 
 body {
-  background: #2E3740;
+  background-color: black;
   color: #435160;
   font-family: "Open Sans", sans-serif;
+}
+
+h1 {
+  color: white;
+  font-family: "Sofia", cursive;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 h2 {
@@ -43,19 +51,19 @@ a {
   margin-left: -175px;
 }
 
-input[type="text"], input[type="password"] {
-  width: 350px;
-  padding: 20px 0px;
-  background: transparent;
-  border: 0;
-  border-bottom: 1px solid #435160;
-  outline: none;
-  color: #6D7781;
-  font-size: 16px;
-}
-input[type=checkbox] {
-  display: none;
-}
+/*input[type="text"], input[type="password"] {*/
+/*  width: 350px;*/
+/*  padding: 20px 0px;*/
+/*  background: transparent;*/
+/*  border: 0;*/
+/*  border-bottom: 1px solid #435160;*/
+/*  outline: none;*/
+/*  color: #6D7781;*/
+/*  font-size: 16px;*/
+/*}*/
+/*input[type=checkbox] {*/
+/*  display: none;*/
+/*}フォーム入力の背景色*/
 
 label {
   display: block;
@@ -121,5 +129,10 @@ label {
 }
 
 .cold-icon {
+  float: right;
+}
+
+.content {
+  width: 50%;
   float: right;
 }
