--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -13,10 +13,17 @@ body {
   background-color: white;
 }
 
-.logo {
+.logo1 {
   width: 150px;
   height: 38px;
   padding-top: 10px;
+}
+
+.logo2 {
+  width: 600px;
+  height: 110px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 h1 {
@@ -165,3 +172,4 @@ label {
   width: 50%;
   float: right;
 }
+
