--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -4,19 +4,25 @@
 }
 
 body {
-  background-color: black;
+  background-color: #d1f5ff;
   color: #435160;
   font-family: "Open Sans", sans-serif;
 }
 
 .navbar {
-  background-color: white;
+  background-color: #d1f5ff;
 }
 
-.logo {
+.logo1 {
+  width: 600px;
+  height: 152px;
+  margin: 150px;
+}
+
+.logo2 {
   width: 150px;
   height: 38px;
-  padding-top: 10px;
+  margin: 10px;
 }
 
 h1 {
@@ -36,6 +42,27 @@ h2 {
   margin-bottom: 20px;
 }
 
+.left-content {
+  width: 49%;
+  margin-top: 50px;
+  font-size: 70px;
+  float: left;
+}
+
+.debu {
+  color: red;
+  font-size: 90px;
+}
+
+.gari {
+  color: blue;
+  font-size: 90px;
+}
+
+.right-content {
+  width: 49%;
+  float: right;
+}
 
   
 
@@ -161,7 +188,52 @@ label {
   float: right;
 }
 
-.content {
-  width: 50%;
-  float: right;
+
+.square_btn {
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    font-size: x-large;
+    padding: 5px 11px 5px 15px;
+    text-decoration: none;
+    color: #67c5ff;
+    transition: .4s;
+    margin: 0 20px;
+}
+
+.square_btn:before {
+   position: absolute;
+   display: inline-block;
+   content: '';
+   width: 4px;
+   height: 100%;
+   top: 0;
+   left: 0;
+   border-radius: 3px;
+   background:#67c5ff;
+}
+
+.square_btn:after{
+   position: absolute;
+   display: inline-block;
+   content: '';
+   width: 4px;
+   height: 100%;
+   top:0;
+   left: 100%;
+   border-radius: 3px;
+   background:#67c5ff;
+}
+
+.square_btn:hover:before,.square_btn19:hover:after{
+  -webkit-transform: rotate(10deg);
+  -ms-transform: rotate(10deg);
+  transform: rotate(10deg);
+}
+
+
+/* feel.blade.php ↓　*/
+
+.feelpage {
+  margin-top: 200px;
 }
