--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -50,8 +50,8 @@ body {
     font-size: x-large;
     padding: 5px 11px 5px 15px;
     text-decoration: none;
-    color: #67c5ff;
     transition: all .5s, opacity .5s 1s, display 0s;
+    background-color: rgba(0,0,0,0);
 }
 
 /* ボタンの左の縦棒 ↓　*/
@@ -64,7 +64,7 @@ body {
    top: 0;
    left: 0;
    border-radius: 3px;
-   background:#67c5ff;
+   background: #5b75ad;
 }
 
 /* 左ボタン ↓　*/
@@ -82,7 +82,7 @@ body {
    top:0;
    left: 100%;
    border-radius: 3px;
-   background:#67c5ff;
+   background: #5b75ad;
 }
 
 /* 右ボタン ↓　*/
@@ -95,7 +95,7 @@ body {
   -webkit-transform: rotate(20deg);
   -ms-transform: rotate(20deg);
   transform: rotate(20deg);
-  background:#67c5ff;
+  background: #5b75ad;
 }
 
 
@@ -153,7 +153,7 @@ body {
     font-size: x-large;
     padding: 5px 11px 5px 15px;
     text-decoration: none;
-    color: #67c5ff;
+    color:  #5b75ad;
 }
 
 /* already have?の部分 ↓　*/
@@ -171,7 +171,7 @@ body {
   font-size: 11px;
   text-align: center;
   font-weight: bold;
-  color: #6D7781;
+  color:  #5b75ad;
 }
 
 ::-webkit-input-placeholder {
@@ -202,7 +202,7 @@ body {
     font-size: x-large;
     padding: 5px 11px 5px 15px;
     text-decoration: none;
-    color: #67c5ff;
+    color:  #5b75ad;
 }
 
 
@@ -221,8 +221,45 @@ body {
   display: inline;
   float: left;
   width: 100%;
-  background-color: red;
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    padding: 5px 11px 5px 15px;
+    text-decoration: none;
+    color: #ff6767;
+    transition: .4s;
 }
+
+.hotbtn:before {
+   position: absolute;
+   display: inline-block;
+   content: '';
+   width: 4px;
+   height: 100%;
+   top: 0;
+   left: 0;
+   border-radius: 3px;
+   background:#ff6767;
+}
+
+.hotbtn:after{
+   position: absolute;
+   display: inline-block;
+   content: '';
+   width: 4px;
+   height: 100%;
+   top:0;
+   left: 100%;
+   border-radius: 3px;
+   background:#ff6767;
+}
+
+.hotbtn:hover:before,.hotbtn:hover:after{
+  -webkit-transform: rotate(10deg);
+  -ms-transform: rotate(10deg);
+  transform: rotate(10deg);
+}
+
 
 .hot-icon{
   float: left;
@@ -238,8 +275,45 @@ body {
   display: inline;
   float: right;
   width: 100%;
-  background-color: blue;
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    padding: 5px 11px 5px 15px;
+    text-decoration: none;
+    color: #67c5ff;
+    transition: .4s;
 }
+
+.coldbtn:before {
+   position: absolute;
+   display: inline-block;
+   content: '';
+   width: 4px;
+   height: 100%;
+   top: 0;
+   left: 0;
+   border-radius: 3px;
+   background:#67c5ff;
+}
+
+.coldbtn:after{
+   position: absolute;
+   display: inline-block;
+   content: '';
+   width: 4px;
+   height: 100%;
+   top:0;
+   left: 100%;
+   border-radius: 3px;
+   background:#67c5ff;
+}
+
+.coldbtn:hover:before,.coldbtn:hover:after{
+  -webkit-transform: rotate(10deg);
+  -ms-transform: rotate(10deg);
+  transform: rotate(10deg);
+}
+
 
 .cold-icon {
   float: right;
