--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -36,13 +36,13 @@ body {
 /* welcome.blade.php ↓　*******************************************************/
 /* welcomeの大ロゴ ↓　*/
 .logo1 {
-  width: 600px;
-  height: 200px;
-  margin: 200px 0px 50px 0px;
+  width: 100%;
+  height: auto;
+  margin: 0px 0px 50px 0px;
   transition: 1.5s;
 }
 
-/* ボタン両方 ↓　*/
+ ボタン両方 ↓　
 .btn {
     position: relative;
     display: inline-block;
@@ -53,7 +53,11 @@ body {
     color: #67c5ff;
     transition: all .5s, opacity .5s 1s, display 0s;
 }
-
+/*.btn-group {*/
+  
+  
+  
+/*}*/
 /* ボタンの左の縦棒 ↓　*/
 .btn:before {
    position: absolute;
