--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -36,11 +36,12 @@ body {
 /* welcome.blade.php ↓　*******************************************************/
 /* welcomeの大ロゴ ↓　*/
 .logo1 {
-  width: 600px;
-  height: 200px;
-  margin: 200px 0px 50px 0px;
+  width: 100%;
+  height: auto;
+  margin: 0px 0px 50px 0px;
   transition: 1.5s;
 }
+
 
 /* ボタン両方 ↓　*/
 .btn {
@@ -69,7 +70,7 @@ body {
 
 /* 左ボタン ↓　*/
 .square_btn1 {
-    margin-right: 100px;
+    
 }
 
 /* ボタンの右の縦棒 ↓　*/
@@ -87,7 +88,7 @@ body {
 
 /* 右ボタン ↓　*/
 .square_btn2 {
-    margin-left: 100px;
+   
 }
 
 /* カーソルを合わせた時の棒の動きの角度 ↓　*/
@@ -105,7 +106,7 @@ body {
   width: 49%;
   margin-top: 50px;
   font-size: 70px;
-  float: left;
+  
 }
 
 .debu {
@@ -123,6 +124,7 @@ body {
   width: 49%;
   float: right;
   margin-top: 20px;
+  display: inline-block;
 }
 
 /* signupのタイトル ↓　*/
