--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -102,7 +102,7 @@ body {
 /* 左側のコンテント ↓　*/
 .ex1 {
     text-align: center;
-    font-size: 100px;
+    font-size: 8vw;
     color: #5b75ad;
 }
 
@@ -351,7 +351,6 @@ body {
 .map-child p {
   width: 24%;
   display: inline-block;
-  height: 500px;
   text-align: center;
   padding: 30% 0;
  　z-index: 10;
