--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -34,11 +34,27 @@ body {
 
 /* welcome.blade.php ↓　*******************************************************/
 /* welcomeの大ロゴ ↓　*/
+.map-unko {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    text-align: center;
+ 　 z-index: 0;
+ 　 font-weight: bold;
+ 　 font-size: 28px !important;
+    opacity: 0.5;
+}
+
+.text-center {
+    position: absolute;
+    top: 10px;
+}
+
 .logo1 {
-  width: 100%;
-  height: auto;
-  margin: 0px 0px 50px 0px;
-  transition: 1.5s;
+    width: 70%;
+    height: auto;
+    margin: 0px 0px 50px 0px;
+    transition: 1.5s;
 }
 
 /* ボタン両方 ↓　*/
@@ -349,7 +365,7 @@ body {
   height: 500px;
   text-align: center;
   padding: 30% 0;
- 　z-index: 10;
+ 　z-index: 0;
  　font-weight: bold;
  　font-size: 28px !important;
 }
