--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,126 +1,98 @@
 @import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 }
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
-.fa-2x {
-font-size: 2em;
-}
-.fa {
-position: relative;
-display: table-cell;
-width: 60px;
-height: 36px;
-text-align: center;
-vertical-align: middle;
-font-size:20px;
-}
 
 
-.main-menu:hover,nav.main-menu.expanded {
-width:250px;
-overflow:visible;
+*, *:before, *:after {
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+}
+ol, ul {
+list-style: none;
+}
+a {
+text-decoration: none;
+color: inherit;
+}
+.cp_cont {
+height: 65vh;
+}
+.cp_offcm01 {
+position: absolute;
+top: 20px;
+right: 20px;
+display: inline-block;
 }
 
-.main-menu {
-background:#d1f5ff;
-/*border-right:1px solid #e5e5e5;*/
-position:absolute;
-top:0;
-bottom:0;
-height:100%;
-left:0;
-width:40px;
-overflow:hidden;
--webkit-transition:width .05s linear;
-transition:width .05s linear;
--webkit-transform:translateZ(0) scale(1,1);
-z-index:1000;
-}
-
-.main-menu>ul {
-margin:7px 0;
-}
-
-.main-menu li {
-position:relative;
-display:block;
-width:250px;
-}
-
-.main-menu li>a {
-position:relative;
-display:table;
-border-collapse:collapse;
-border-spacing:0;
-color:#5b75ad;
- font-family: arial;
-font-size: 14px;
-text-decoration:none;
--webkit-transform:translateZ(0) scale(1,1);
--webkit-transition:all .1s linear;
-transition:all .1s linear;
-  
-}
-
-.main-menu .nav-icon {
-position:relative;
-display:table-cell;
-width:60px;
-height:36px;
-text-align:center;
-vertical-align:middle;
-font-size:18px;
-}
-
-.main-menu .nav-text {
-position:relative;
-display:table-cell;
-vertical-align:middle;
-width:190px;
-  font-family: 'Titillium Web', sans-serif;
-}
-
-.main-menu>ul.logout {
-position:absolute;
-left:0;
-bottom:0;
-}
-
-.no-touch .scrollable.hover {
-overflow-y:hidden;
-}
-
-.no-touch .scrollable.hover:hover {
-overflow-y:auto;
-overflow:visible;
-}
-
-a:hover,a:focus {
-text-decoration:none;
-}
-
-nav {
--webkit-user-select:none;
--moz-user-select:none;
--ms-user-select:none;
--o-user-select:none;
-user-select:none;
-}
-
-nav ul,nav li {
-outline:0;
-margin:0;
-padding:0;
-}
-.main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
-color:#fff;
-background-color:#5fa2db;
-}
-.area {
-/*float: left;*/
-background: #5b75ad;
-width: 100%;
+/* menuの背景色 */
+.cp_offcm01 .cp_menu {
+position: fixed;
+top: 0;
+right: -100vw;
+width: 150px;
 height: 100%;
+cursor: pointer;
+-webkit-transition: 0.53s transform;
+transition: 0.53s transform;
+-webkit-transition-timing-function: cubic-bezier(.38,.52,.23,.99);
+transition-timing-function: cubic-bezier(.38,.52,.23,.99);
+background-color: #d1f5ff;
+opacity: 0.8;
 }
+.cp_offcm01 .cp_menu ul {
+margin: 0;
+padding: 0;
+}
+.cp_offcm01 .cp_menu li {
+list-style: none;
+}
+.cp_offcm01 .cp_menu li a {
+display: block;
+padding: 20px;
+text-decoration: none;
+color: #5b75ad;
+border-bottom: 1px solid #5b75ad;
+}
+.cp_offcm01 #cp_toggle01 {
+position: absolute;
+display: none;
+opacity: 0;
+}
+.cp_offcm01 #cp_toggle01:checked ~ .cp_menu {
+-webkit-transform: translateX(-100vw);
+transform: translateX(-100vw);
+}
+/* menu toggle */
+.cp_offcm01 #cp_toggle01 ~ label {
+display: block;
+padding: 0.5em;
+cursor: pointer;
+-webkit-transition: 0.5s transform;
+transition: 0.5s transform;
+-webkit-transition-timing-function: cubic-bezier(.61,-0.38,.37,1.27);
+transition-timing-function: cubic-bezier(.61,-0.38,.37,1.27);
+text-align: center;
+color: #5b75ad;
+}
+.cp_offcm01 #cp_toggle01:checked ~ label {
+-webkit-transform: translateX(-150px);
+transform: translateX(-150px);
+}
+.cp_offcm01 #cp_toggle01 ~ label::before {
+font-family: 'FontAwesome';
+content: '\f0c9';
+font-size: 2em
+}
+.cp_offcm01 #cp_toggle01:checked ~ label::before {
+content: '\f00d';
+}
+/* contents */
+.cp_contents {
+color: #5b75ad;
+text-align: center;
+}
+
 @font-face {
   font-family: 'Titillium Web';
   font-style: normal;
