--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -7,6 +7,8 @@ body {
   background-color: #d1f5ff;
   color: #435160;
   font-family: "Open Sans", sans-serif;
+  width: auto;
+  height: auto;
 }
 
 /* navbar.blade.php ↓　********************************************************/
@@ -365,7 +367,6 @@ body {
   height: 500px;
   text-align: center;
   padding: 30% 0;
- 　z-index: 0;
  　font-weight: bold;
  　font-size: 28px !important;
 }
