--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: #d1f5ff;
+  background-color: #fffef4;
   color: #435160;
   font-family: "Open Sans", sans-serif;
 }
