--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -330,7 +330,7 @@ footer {
   font-weight: bold;
   padding: 5px 11px 5px 15px;
   text-decoration: none;
-  color: #67c5ff;
+  color: #03eb89;
   transition: .4s;
   margin-top: 25px;
 }
@@ -344,7 +344,7 @@ footer {
    top: 0;
    left: 0;
    border-radius: 3px;
-   background:#67c5ff;
+   background:#03eb89;
 }
 
 .combtn:after{
@@ -356,7 +356,7 @@ footer {
    top:0;
    left: 100%;
    border-radius: 3px;
-   background:#67c5ff;
+   background:#03eb89;
 }
 
 .combtn:hover:before,.combtn:hover:after{
