--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -10,7 +10,7 @@
 body {
   background-color: #d1f5ff;
   color: #435160;
-  font-family: "Open Sans", sans-serif;
+  /*font-family: "Open Sans", sans-serif;*/
 }
 
 /* copyright*/
@@ -20,20 +20,24 @@ footer {
 }
 
 /* navbar.blade.php ↓　********************************************************/
-/*.navbar {*/
-/*  background-color: #d1f5ff;*/
-/*}*/
+.navbar {
+  background-color: #d1f5ff;
+}
+
+/* カーソルを当てた時のアニメーション↓　*/
+.navbar-right:hover {
+  background-color: #5b75ad;
+}
 
 /* navbarの下線消すコード ↓　*/
-/*.navbar-static-top {*/
-/*  border-width: 0;*/
-/*}*/
+.navbar-static-top {
+  border-width: 0;
+}
 
 /* navbarの小ロゴ ↓　*/
 .logo2 {
   width: 150px;
   height: 50px;
-  position: fixed;
 }
 
 
@@ -54,16 +58,16 @@ footer {
 /* 大ロゴとボタンのdiv*/
 .text-center {
     position: absolute;
-    top: 10px;
+    top: 100px;
     width: 100%;
     z-index: 10;
 }
 
 /* welcomeの大ロゴ ↓　*/
 .logo1 {
-    width: 70%;
-    height: auto;
-    margin: 100px 0px 50px 0px;
+    width: 30%;
+    height: 30%;   
+    margin: 0px 25px 50px 0px;
     transition: 1.5s;
 }
 
@@ -131,9 +135,8 @@ footer {
 
 /* register.blade.php ↓　******************************************************/
 .ex1 {
-    font-family: "Sofia", cursive;
     text-align: center;
-    font-size: 70px;
+    font-size: 100px;
     color: #5b75ad;
 }
 
@@ -162,6 +165,13 @@ footer {
 
 /*}*/
 
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Sofia", cursive;
+}
+
+
 /* signupのタイトル ↓　*/
 .sighup-title {
   color: #5b75ad;
@@ -180,6 +190,11 @@ footer {
   font-size: 1.4em;
   text-align: left;
   margin-bottom: 2px;
+}
+
+/* signupの入力内容　*/
+.form{
+    font-family: arial;
 }
 
 /* signupボタン ↓　*/
@@ -259,14 +274,14 @@ footer {
 
 /* 左のコンテント ↓　*/
 .hotcontent {
-  width: 33%;
+  width: 40%;
   float: left;
   text-align: center;
-  /*margin-left: 10%;*/
+  margin-left: 10%;
 }
 
 .hot-icon_img{
-   width: 33%;
+   width: 50%;
 }
 
 .hotbtn{
@@ -311,70 +326,16 @@ footer {
   transform: rotate(10deg);
 }
 
-/* comfortableのコンテント ↓　*/
-.comcontent {
-  width: 33%;
-  float: left;
-  text-align: center;
-  /*margin-right: 10%;*/
-}
-
-.com-icon_img {
-  width: 33%;
-}
-
-.combtn{
-  display: inline;
-  position: relative;
-  display: inline-block;
-  font-weight: bold;
-  padding: 5px 11px 5px 15px;
-  text-decoration: none;
-  color: #67c5ff;
-  transition: .4s;
-  margin-top: 25px;
-}
-
-.combtn:before {
-   position: absolute;
-   display: inline-block;
-   content: '';
-   width: 4px;
-   height: 100%;
-   top: 0;
-   left: 0;
-   border-radius: 3px;
-   background:#67c5ff;
-}
-
-.combtn:after{
-   position: absolute;
-   display: inline-block;
-   content: '';
-   width: 4px;
-   height: 100%;
-   top:0;
-   left: 100%;
-   border-radius: 3px;
-   background:#67c5ff;
-}
-
-.combtn:hover:before,.combtn:hover:after{
-  -webkit-transform: rotate(10deg);
-  -ms-transform: rotate(10deg);
-  transform: rotate(10deg);
-}
-
 /* 右のコンテント ↓　*/
 .coldcontent {
-  width: 33%;
+  width: 40%;
   float: right;
   text-align: center;
-  /*margin-right: 10%;*/
+  margin-right: 10%;
 }
 
 .cold-icon_img {
-  width: 33%;
+  width: 50%;
 }
 
 .coldbtn{
@@ -434,15 +395,12 @@ footer {
   display: inline-block;
   text-align: center;
   padding: 30% 0;
- 　z-index: 0;
- 　font-weight: bold;
- 　font-size: 28px !important;
+  z-index: 0;
+  font-family: sofia;
+  font-weight: bold;
+  font-size: 28px !important;
 }
 
-/* result.blade.php ↓　***********************************************************/
-.result-top {
-    margin-top: 50px;
-}
 
 
 
