--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -57,11 +57,12 @@ footer {
     top: 10px;
     width: 100%;
     z-index: 10;
+    margin-top: 100px;
 }
 
 /* welcomeの大ロゴ ↓　*/
 .logo1 {
-    width: 70%;
+    width: 30%;
     height: auto;
     margin: 100px 0px 50px 0px;
     transition: 1.5s;
