--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -61,14 +61,13 @@ footer {
     top: 100px;
     width: 100%;
     z-index: 10;
-    margin-top: 100px;
 }
 
 /* welcomeの大ロゴ ↓　*/
 .logo1 {
-    width: 30%;
+    width: 40%;
     height: auto;
-    margin: 100px 0px 50px 0px;
+    margin: 0px 0px 50px 0px;
     transition: 1.5s;
 }
 
@@ -275,14 +274,14 @@ footer {
 
 /* 左のコンテント ↓　*/
 .hotcontent {
-  width: 40%;
+  width: 33%;
   float: left;
   text-align: center;
-  margin-left: 10%;
+  /*margin-left: 10%;*/
 }
 
 .hot-icon_img{
-   width: 50%;
+   width: 33%;
 }
 
 .hotbtn{
@@ -384,14 +383,14 @@ footer {
 
 /* 右のコンテント ↓　*/
 .coldcontent {
-  width: 40%;
+  width: 33%;
   float: right;
   text-align: center;
-  margin-right: 10%;
+  /*margin-right: 10%;*/
 }
 
 .cold-icon_img {
-  width: 50%;
+  width: 33%;
 }
 
 .coldbtn{
