--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -5,31 +5,22 @@
 
 .container {
     width: 100%;
+    height: 100%;
 }
 
-body {
+.body {
   background-color: #d1f5ff;
   color: #435160;
   font-family: "Open Sans", sans-serif;
 }
 
 /* copyright*/
-footer {
+.footer {
     text-align: center;
     margin-top: 35px;
 }
 
-/* navbar.blade.php ↓　********************************************************/
-/*.navbar {*/
-/*  background-color: #d1f5ff;*/
-/*}*/
 
-/* navbarの下線消すコード ↓　*/
-/*.navbar-static-top {*/
-/*  border-width: 0;*/
-/*}*/
-
-/* navbarの小ロゴ ↓　*/
 .logo2 {
   width: 150px;
   height: 50px;
@@ -143,24 +134,6 @@ footer {
     color: #5b75ad;
 }
 
-/*.left-content {*/
-/*  font-size: 70px;*/
-/*}*/
-
-/*.debu {*/
-/*  color: red;*/
-/*  font-size: 90px;*/
-/*}*/
-
-/*.gari {*/
-/*  color: blue;*/
-/*  font-size: 90px;*/
-/*}*/
-
-/* 右側のコンテント ↓　*/
-/*.right-content {*/
-
-/*}*/
 
 /* signupのタイトル ↓　*/
 .sighup-title {
@@ -422,24 +395,15 @@ footer {
 
 
 /* map.blade.php ↓　***********************************************************/
-.map-child  {
-  width: 100%;
-  display: inline-block;
-  height: 100%;
-  text-align: center;
+.map p {
+    width: 100%;
+    text-align: center;
+    
 }
-
-.map-child p {
-  width: 20%;
-  display: inline-block;
-  text-align: center;
-  padding: 30% 0;
- 　z-index: 0;
- 　font-weight: bold;
- 　font-size: 28px !important;
-}
-
+  
 .maplinks  {
+    width: 100%;
+    text-align: center;
   ;
 }
 
@@ -450,6 +414,10 @@ footer {
 /* result.blade.php ↓　***********************************************************/
 .result-top {
     margin-top: 50px;
+}
+
+.newnav {
+    z-index: 10;
 }
 
 
