--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -38,6 +38,7 @@ footer {
 .logo2 {
   width: 150px;
   height: 50px;
+  position: fixed;
 }
 
 
@@ -136,7 +137,7 @@ footer {
 /* register.blade.php ↓　******************************************************/
 .ex1 {
     text-align: center;
-    font-size: 100px;
+    font-size: 75px;
     color: #5b75ad;
 }
 
@@ -462,7 +463,9 @@ footer {
 }
 
 
-
+.tribe {
+    margin-top: 60px;
+}
 
 /*input[type="text"], input[type="password"] {*/
 /*  width: 350px;*/
