--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -462,7 +462,7 @@ footer {
     width: 100%;
   text-align: center;
 }
-.map-detaile p {
+.map-detail p {
     display: inline-block;
     width: 24%;
     margin-top: 30px;
