--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -466,6 +466,8 @@ footer {
     display: inline-block;
     width: 24%;
     margin-top: 30px;
+    font-size: 20px;
+    font-weight: bold;
     
 }
 
