--- a/public/css/css.css
+++ b/public/css/css.css
@@ -30,7 +30,7 @@ display: inline-block;
 position: fixed;
 top: 0;
 right: -100vw;
-width: 150px;
+width: 170px;
 height: 100%;
 cursor: pointer;
 -webkit-transition: 0.53s transform;
@@ -86,8 +86,8 @@ text-align: center;
 color: #5b75ad;
 }
 .cp_offcm01 #cp_toggle01:checked ~ label {
--webkit-transform: translateX(-150px);
-transform: translateX(-150px);
+-webkit-transform: translateX(-170px);
+transform: translateX(-170px);
 }
 .cp_offcm01 #cp_toggle01 ~ label::before {
 font-family: 'FontAwesome';
@@ -107,9 +107,9 @@ text-align: center;
   font-size: 2em;
 }
 
-@font-face {
-  font-family: 'Titillium Web';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
-}
+/*@font-face {*/
+/*  font-family: 'Titillium Web';*/
+/*  font-style: normal;*/
+/*  font-weight: 300;*/
+/*  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');*/
+/*}*/
