--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -267,6 +267,38 @@ footer {
     color:  #5b75ad;
 }
 
+/* manipulation.blae.php */
+.asakai {
+    float: left;
+    width: 49%;
+}
+
+.remote {
+    float: right;
+    width: 49%;
+}
+
+.map {
+    width: 100%;
+    height: 50%;
+}
+
+.remotes {
+}
+
+
+.remote1 {
+    padding-top: 0;
+    width: 47%;
+    height: auto;
+}
+
+.remote2 {
+    width: 49%;
+    height: auto;
+}
+
+
 
 
 /* feel.blade.php ↓　**********************************************************/
