--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -270,17 +270,21 @@ footer {
 /* manipulation.blae.php */
 .asakai {
     float: left;
+    text-align: center;
     width: 49%;
+    padding: 30px 0px 30px 30px;
 }
 
 .remote {
     float: right;
+    text-align: center;
     width: 49%;
+    padding: 30px 30px 30px 0px;
 }
 
 .map {
     width: 100%;
-    height: 50%;
+    height: auto;
 }
 
 .remotes {
