--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -484,7 +484,50 @@ footer {
     margin-top: 10px;
 }
 
+.clearbtnparent {
+    text-align:center;
+}
 
+.clearbtn {
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    padding: 5px 11px 5px 15px;
+    text-decoration: none;
+    color: #5b75ad ;
+    transition: .4s;
+    margin:0 10px;
+}
+
+.clearbtn:before {
+   position: absolute;
+   display: inline-block;
+   content: '';
+   width: 4px;
+   height: 100%;
+   top: 0;
+   left: 0;
+   border-radius: 3px;
+   background:#5b75ad ;
+}
+
+.clearbtn:after{
+   position: absolute;
+   display: inline-block;
+   content: '';
+   width: 4px;
+   height: 100%;
+   top:0;
+   left: 100%;
+   border-radius: 3px;
+   background:#5b75ad ;
+}
+
+.clearbtn:hover:before,.clearbtn:hover:after{
+  -webkit-transform: rotate(10deg);
+  -ms-transform: rotate(10deg);
+  transform: rotate(10deg);
+}
 /*input[type="text"], input[type="password"] {*/
 /*  width: 350px;*/
 /*  padding: 20px 0px;*/
