--- a/public/css/css.css
+++ b/public/css/css.css
@@ -7,10 +7,14 @@
 padding: 0;
 margin: 0;
 box-sizing: border-box;
+text-align:center;
 }
+
 ol, ul {
 list-style: none;
+text-align :center;
 }
+
 a {
 text-decoration: none;
 color: inherit;
