--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -39,10 +39,13 @@ footer {
 
 /* welcome.blade.php ↓　*******************************************************/
 /* welcomeの背景*/
-welcome {
+.welcome {
     background-image: url("../images/sky.jpg");
 }
-
+.sky {
+    width: 100%;
+    height: 100%;
+}
 .map-child  {
   width: 100%;
   display: inline-block;
