--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -689,16 +689,36 @@
 .veryhot-tribe {padding-top: 50px; font-size: 30px; animation: blinkAnime .2s infinite alternate;}
 @keyframes blinkAnime{
    0% { color: #000000 }
- 100% { color: yellow }
+ 100% { color: red }
 }
 
-.veryhot-tribe:hover {
-    color: white;
+.veryhot-tribe:hover:after{
+content:"エアコンを３度下げる事を許可します。";
+display:block;
+position:fixed;
+left:0;
+width:100%;
+height:30px;
+line-height:30px;
+font-weight:bold;
+text-align:center;
 }
 .hot-tribe {padding-top: 60px; font-size:25px; animation: blinkAnime 1s infinite alternate;}
 @keyframes blinkAnime{
    0% { color: #000000 }
  100% { color: red }
+}
+
+.hot-tribe:hover:after{
+content:"エアコンを２度下げる事を許可します。";
+display:block;
+position:fixed;
+left:0;
+width:100%;
+height:30px;
+line-height:30px;
+font-weight:bold;
+text-align:center;
 }
 
 .cold-tribe {padding-top: 60px; font-size:25px; animation: blinknoAnime 1s infinite alternate;}
@@ -707,15 +727,50 @@
  100% { color: blue }
 }
 
+.cold-tribe:hover:after{
+content:"エアコンを２度上げる事を許可します。";
+display:block;
+position:fixed;
+left:0;
+width:100%;
+height:30px;
+line-height:30px;
+font-weight:bold;
+text-align:center;
+}
 .verycold-tribe {padding-top: 50px; font-size: 30px; animation: blinknoAnime .2s infinite alternate;}
 @keyframes blinknoAnime{
    0% { color: #000000 }
  100% { color: blue }
 }
 
+.verycold-tribe:hover:after{
+content:"エアコンを３度上げる事を許可します。";
+display:block;
+position:fixed;
+left:0;
+width:100%;
+height:30px;
+line-height:30px;
+font-weight:bold;
+text-align:center;
+}
+
 .com-tribe {
     font-size: 20px;
     padding-top: 60px;
+}
+
+.com-tribe:hover:after{
+content:"快適なはずです。";
+display:block;
+position:fixed;
+left:0;
+width:100%;
+height:30px;
+line-height:30px;
+font-weight:bold;
+text-align:center;
 }
 
 .clearbtnparent {
