--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -8,27 +8,31 @@
     
 }
 
-.body {
+body {
     background-color: #fffef4;
     color: #435160;
   /*font-family: "Open Sans", sans-serif;*/
 }
 
 /* copyright*/
-.footer {
+footer {
     text-align: center;
-    
+    width: 100%;
+    margin-top: 20px;
 }
 
 /* navbarの小ロゴ ↓　*/
 .logo2 {
   width: 150px;
   height: 50px;
+  margin: 10px 0px 0px 10px;
 }
 
-.icon-image {
-    margin-top: 10px;
-}
+/*.icon-image {*/
+/*    margin: 10px 0px 0px 10px;*/
+/*    position: fixed;*/
+    
+/*}*/
 
 .feelings {
     text-align: center;
@@ -165,7 +169,7 @@
 /* register.blade.php ↓　******************************************************/
 .ex1 {
     text-align: center;
-    font-size: 100px;
+    font-size: 50px;
     color: #5b75ad;
 }
 
@@ -175,40 +179,10 @@
     color: #5b75ad;
 }
 
-/*.left-content {*/
-/*  font-size: 70px;*/
-/*}*/
-
-/*.debu {*/
-/*  color: red;*/
-/*  font-size: 90px;*/
-/*}*/
-
-/*.gari {*/
-/*  color: blue;*/
-/*  font-size: 90px;*/
-/*}*/
-
-/* 右側のコンテント ↓　*/
-/*.right-content {*/
-
-/*}*/
-
 * {
   margin: 0;
   padding: 0;
   font-family: cursive;
-}
-
-
-/* signupのタイトル ↓　*/
-.sighup-title {
-  color: #5b75ad;
-  font-family: cursive;
-  font-weight: bold;
-  font-size: 3.6em;
-  text-align: center;
-  margin-bottom: 20px;
 }
 
 /* signupの質問項目 ↓　*/
@@ -326,8 +300,8 @@
 
 
 /* feel.blade.php ↓　**********************************************************/
-.feelpage {
-  margin-top: 0px;
+.feel-page {
+  margin-bottom: 290px;
 }
 
 .explanation {
@@ -599,7 +573,6 @@
   width: 24%;
   display: inline-block;
   text-align: center;
-  padding: 15% 0;
   font-family: cursive;
   font-weight: bold;
   font-size: 28px !important;
@@ -632,7 +605,7 @@
 
 /*map color info*/
 .colorinfo {
-    margin-top: 900px;
+    margin-top: 20px;
     text-align: center;
 }
 
@@ -676,12 +649,13 @@
 .tribe {
     margin: 10px 10px;
     text-align: center;
+    width: 100%;
 }
 
 .screen {
     text-align: center;
     font-size: 30px;
-    margin: 20px 0px;
+    margin-bottom: 20px;
     border: 2px;
 }
 
