--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -5,20 +5,24 @@
 
 .container {
     width: 100%;
+    padding: 0;
     
 }
 
 body {
     background-color: #fffef4;
     color: #435160;
-  /*font-family: "Open Sans", sans-serif;*/
+    display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  
 }
 
 /* copyright*/
 footer {
     text-align: center;
     width: 100%;
-    margin-top: 20px;
+    margin-top: auto;
 }
 
 /* navbarの小ロゴ ↓　*/
@@ -44,13 +48,12 @@ footer {
 
 /* welcome.blade.php ↓　*******************************************************/
 /* welcomeの背景*/
-.welcome {
-    background-image: url("../images/sky.jpg");
-}
+
 .sky {
-    width: 100%;
+    background-image: url("../images/sky.jpg");
+    width: 100% !important;
     height: 100%;
-    margin: 0 0 0 0;
+   
 }
 .map-child  {
   width: 100%;
@@ -846,5 +849,6 @@ h1{
 .footer2 footer{
     font-size: 30px;
      text-align:center;
+     
 }
 
